--- a/style.css
+++ b/style.css
@@ -10,8 +10,15 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
 h1.site-title {
-	font-size: 1.5em;
-	text-align: center;
+	margin: 8px 0 4px;
+}
+
+h1.site-title a span {
+    font: 0/0 a;
+	background: white url(images/logo.png) no-repeat top center;
+	height: 48px;
+	width: 100%;
+	display: block;
 }
 
 h2.entry-title, h2.page-title {
