--- a/style.css
+++ b/style.css
@@ -10,17 +10,27 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
 h1.site-title {
-	margin: 8px 0 4px;
+    margin: 8px 0 12px;
 }
 
 h1.site-title a span {
     font: 0/0 a;
-	background: white url(images/logo.png) no-repeat top center;
-	height: 48px;
-	width: 100%;
-	display: block;
+    background: white url(images/logo.png) no-repeat top center;
+    height: 48px;
+    width: 100%;
+    display: block;
 }
 
 h2.entry-title, h2.page-title {
-	font-size: 1.2em;
+    font-size: 1.2em;
+}
+
+#main {
+    padding: 0 12px;
+}
+
+.aligncenter {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
