--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 /*
 Theme Name: Syrup
 Theme URI: http://endflow.net/syrup
+Description: A reference theme for Syrup plugin.
 Author: Yuki Kodama
-Author URI: http://endflow.net
-Description:
-Version: 0.0.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Author URI: http://endflow.net/
+Version: 1.0.0
+License: MIT
 */
 
 h1.site-title {
